Update and rename rescursion.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><base href="https://websim.ai/simulate?url=United+with+this+simulator+to+create+you+a+fully+unlimited+simulator+"><title>WebSim.AI - Infinite Recursion Simulator</title>
+<html><head><title>WebSim.AI - Infinite Recursion Simulator</title>
 <style>
 :root {
   --primary: #00ffcc;
