--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><title>WebSim.AI - Infinite Recursion Simulator</title>
+<html><head><title> Infinite Recursion Simulator</title>
 <style>
 :root {
   --primary: #00ffcc;
